@@ -1,4 +1,4 @@
-GNU mailutils NEWS -- history of user-visible changes. 2018-08-26
+GNU mailutils NEWS -- history of user-visible changes. 2018-10-24
 Copyright (C) 2002-2018 Free Software Foundation, Inc.
 See the end of file for copying conditions.
 
@@ -45,6 +45,13 @@ Default is selected depending on number of printable characters in "hdr".
 Optional charset defaults to "utf-8".
 
 * Introduced support for Python 3.x
+
+* Define sieve variables from the command line
+
+The sieve utility now allows you to supply initial values for
+RFC 5229 variables using the --variable command line option, e.g.
+
+  sieve --variable mailbox=outgoing 
 
 * Support for Berkeley DB versions 5 and 6
 
